k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  namespace: torrent
  labels:
    app: rtorrent-flood
spec:
  type: LoadBalancer
  ports:
    # TODO: check if you wanna expose rtorrent to
    # make it connectable
  - name: rtorrent
    port: 49184
    targetPort: 49184
  selector:
    app: rtorrent-flood
---
apiVersion: v1
kind: Service
metadata:
  name: flood
  namespace: torrent
  labels:
    app: rtorrent-flood
spec:
  type: ClusterIP
  ports:
  - name: flood
    port: 80
    targetPort: flood-http
  selector:
    app: rtorrent-flood
